tests/fixtures/valid/layout/line_break_member_call.pine
//@version=6
indicator("Chain")
x = str.tostring(
    ta.sma(close, 20)
)
plot(close, title = "Chain SMA")
