tests/fixtures/invalid/syntax/duplicate_named_arg.pine
//@version=6
indicator("x")
plot(close, title = "a", title = "b")
